--- a/src/Voter/Web.config
+++ b/src/Voter/Web.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
-  <connectionStrings>
-  </connectionStrings>
+  <connectionStrings configSource="ConnectionStrings.config"/>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
     <httpRuntime targetFramework="4.6" />
