Read connection string from config and add registrations to composition.

--- a/src/Voter/Voter.csproj
+++ b/src/Voter/Voter.csproj
@@ -128,7 +128,10 @@
     <Compile Include="Api\Users\UsersModule.cs" />
     <Compile Include="App\AppModule.cs" />
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Composition\AppSettingsReader.cs" />
+    <Compile Include="Composition\IAppSettingsReader.cs" />
     <Compile Include="Composition\CompositionRoot.cs" />
+    <Compile Include="Composition\DataModule.cs" />
     <Compile Include="Composition\NancyModule.cs" />
     <Compile Include="Composition\SecurityModule.cs" />
     <Compile Include="Configuration\CamelCaseAndSupportForPrivateSettersContractResolver.cs" />
