--- a/src/Voter.Tests/Voter.Tests.csproj
+++ b/src/Voter.Tests/Voter.Tests.csproj
@@ -107,6 +107,8 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Api\ApiBootstrapper.cs" />
+    <Compile Include="WebConfigLoaderForUnitTests.cs" />
+    <Compile Include="Composition\AppSettingsReaderTests.cs" />
     <Compile Include="FakeUserIdentity.cs" />
     <Compile Include="Api\Users\Handlers\GetCurrentUserHandlerTests.cs" />
     <Compile Include="Api\Users\Handlers\LogoutHandlerTests.cs" />
@@ -161,6 +163,9 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="ConnectionStrings.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
