--- a/src/Voter.Tests/app.config
+++ b/src/Voter.Tests/app.config
@@ -1,5 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <connectionStrings configSource="ConnectionStrings.config" />
+  <system.web>
+    <compilation debug="true" targetFramework="4.6.2" />
+    <httpRuntime targetFramework="4.6" />
+  </system.web>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
+    <httpErrors existingResponse="PassThrough" />
+    <handlers>
+      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+    </handlers>
+  </system.webServer>
+  <appSettings>
+    <add key="owin:HandleAllRequests" value="true" />
+    <add key="owin:AppStartup" value="DavidLievrouw.Voter.Startup" />
+    <add key="Nancy:MemoryCacheBasedSessions:SessionTimeoutMinutes" value="120" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
