--- a/src/Voter.Tests/Voter.Tests.csproj
+++ b/src/Voter.Tests/Voter.Tests.csproj
@@ -106,7 +106,8 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Api\ApiBootstrapper.cs" />
+    <Compile Include="App\Handlers\LoginViewModelHandlerTests.cs" />
+    <Compile Include="LightweightBootstrapper.cs" />
     <Compile Include="WebConfigLoaderForUnitTests.cs" />
     <Compile Include="Composition\AppSettingsReaderTests.cs" />
     <Compile Include="FakeUserIdentity.cs" />
@@ -114,7 +115,6 @@
     <Compile Include="Api\Users\Handlers\LogoutHandlerTests.cs" />
     <Compile Include="Models.cs" />
     <Compile Include="Api\Handlers\RequestValidationAwareHandlerTests.cs" />
-    <Compile Include="Api\LightweightBootstrapper.cs" />
     <Compile Include="Api\Users\Validation\GetCurrentUserRequestValidatorTests.cs" />
     <Compile Include="Api\Users\Validation\LogoutRequestValidatorTests.cs" />
     <Compile Include="Api\Users\UsersModuleTests.LogoutUser.cs" />
