--- a/src/Voter/Voter.csproj
+++ b/src/Voter/Voter.csproj
@@ -127,6 +127,8 @@
     <Compile Include="Api\Users\Validation\LogoutRequestValidator.cs" />
     <Compile Include="Api\Users\UsersModule.cs" />
     <Compile Include="App\AppModule.cs" />
+    <Compile Include="App\Handlers\LoginViewModelHandler.cs" />
+    <Compile Include="App\Models\LoginViewModel.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Composition\AppSettingsReader.cs" />
     <Compile Include="Composition\IAppSettingsReader.cs" />
@@ -172,7 +174,7 @@
     <Compile Include="Security\Nancy\SessionHijacking\SecureSessionCookieReader.cs" />
     <Compile Include="Security\UserFromSessionResolver.cs" />
     <Compile Include="Startup.cs" />
-    <Content Include="App\Login\login.html" />
+    <None Include="App\Login\login.sshtml" />
     <Content Include="ConnectionStrings.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
