--- a/src/Voter.Tests/Voter.Tests.csproj
+++ b/src/Voter.Tests/Voter.Tests.csproj
@@ -106,6 +106,8 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Api\Users\UsersModuleTests.LoginGooglePlusUser.cs" />
+    <Compile Include="Api\Users\Validation\LoginGooglePlusUserRequestValidatorTests.cs" />
     <Compile Include="App\Handlers\LoginViewModelHandlerTests.cs" />
     <Compile Include="Composition\HttpRequestPhysicalRootPathResolverTests.cs" />
     <Compile Include="LightweightBootstrapper.cs" />
@@ -120,12 +122,12 @@
     <Compile Include="Api\Users\Validation\GetCurrentUserRequestValidatorTests.cs" />
     <Compile Include="Api\Users\Validation\LogoutRequestValidatorTests.cs" />
     <Compile Include="Api\Users\UsersModuleTests.LogoutUser.cs" />
-    <Compile Include="Api\Users\UsersModuleTests.LoginUser.cs" />
+    <Compile Include="Api\Users\UsersModuleTests.LoginLocalUser.cs" />
     <Compile Include="Api\Users\UsersModuleTests.GetCurrentUser.cs" />
     <Compile Include="Api\Users\UsersModuleTests.SetUp.cs" />
     <Compile Include="App\AppModuleTests.GetLoginView.cs" />
     <Compile Include="App\AppModuleTests.Setup.cs" />
-    <Compile Include="Api\Users\Validation\LoginRequestValidatorTests.cs" />
+    <Compile Include="Api\Users\Validation\LoginLocalUserRequestValidatorTests.cs" />
     <Compile Include="Common\NullAllowableValidatorTests.cs" />
     <Compile Include="Composition\CompositionRootTests.cs" />
     <Compile Include="Configuration\VoterRootPathProvider.cs" />
