--- a/src/Voter/Voter.csproj
+++ b/src/Voter/Voter.csproj
@@ -115,15 +115,17 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Api\Users\Handlers\GetCurrentUserHandler.cs" />
-    <Compile Include="Api\Users\Handlers\LoginHandler.cs" />
+    <Compile Include="Api\Users\Handlers\LoginLocalUserHandler.cs" />
     <Compile Include="Api\Users\Handlers\LogoutHandler.cs" />
     <Compile Include="Api\Handlers\RequestValidationAwareHandler.cs" />
     <Compile Include="Api\Handlers\RequestValidationException.cs" />
+    <Compile Include="Api\Users\Models\LoginGooglePlusUserRequest.cs" />
     <Compile Include="Api\Users\Models\LogoutRequest.cs" />
-    <Compile Include="Api\Users\Models\LoginRequest.cs" />
+    <Compile Include="Api\Users\Models\LoginLocalUserRequest.cs" />
     <Compile Include="Api\Users\Models\GetCurrentUserRequest.cs" />
     <Compile Include="Api\Users\Validation\GetCurrentUserRequestValidator.cs" />
-    <Compile Include="Api\Users\Validation\LoginRequestValidator.cs" />
+    <Compile Include="Api\Users\Validation\LoginGooglePlusUserRequestValidator.cs" />
+    <Compile Include="Api\Users\Validation\LoginLocalUserRequestValidator.cs" />
     <Compile Include="Api\Users\Validation\LogoutRequestValidator.cs" />
     <Compile Include="Api\Users\UsersModule.cs" />
     <Compile Include="App\AppModule.cs" />
