Further attempt to make the login using google plus work. Not quite there yet...

--- a/src/Voter.Domain/Voter.Domain.csproj
+++ b/src/Voter.Domain/Voter.Domain.csproj
@@ -44,9 +44,11 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="DTO\ExternalCorrelationId.cs" />
     <Compile Include="DTO\Login.cs" />
     <Compile Include="DTO\Password.cs" />
     <Compile Include="DTO\User.cs" />
+    <Compile Include="DTO\UserType.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Voter.Common\Voter.Common.csproj">
