--- a/src/Voter.Tests/app.config
+++ b/src/Voter.Tests/app.config
@@ -21,7 +21,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.4.0.0" newVersion="4.4.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="KellermanSoftware.Compare-NET-Objects" publicKeyToken="d970ace04cc85217" culture="neutral" />
@@ -29,15 +29,19 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="FakeItEasy" publicKeyToken="eff28e2146d5fd2c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.3.3.0" newVersion="2.3.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="FluentAssertions.Core" publicKeyToken="33f2691a05b67b6a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.19.0.0" newVersion="4.19.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.19.2.0" newVersion="4.19.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="FluentAssertions" publicKeyToken="33f2691a05b67b6a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.19.0.0" newVersion="4.19.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.19.2.0" newVersion="4.19.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
