--- a/src/Voter/packages.config
+++ b/src/Voter/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.3.0" targetFramework="net462" />
+  <package id="Autofac" version="4.4.0" targetFramework="net462" />
   <package id="DavidLievrouw.Utils" version="4.0.0" targetFramework="net462" />
-  <package id="FluentValidation" version="6.2.1.0" targetFramework="net462" />
+  <package id="FluentValidation" version="6.4.0" targetFramework="net462" />
+  <package id="Google.Apis" version="1.21.0" targetFramework="net462" />
+  <package id="Google.Apis.Auth" version="1.21.0" targetFramework="net462" />
+  <package id="Google.Apis.Core" version="1.21.0" targetFramework="net462" />
+  <package id="Google.Apis.Oauth2.v2" version="1.21.0.672" targetFramework="net462" />
+  <package id="Google.Apis.Plus.v1" version="1.21.0.801" targetFramework="net462" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net462" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net462" />
   <package id="Nancy" version="1.4.3" targetFramework="net462" />
@@ -12,4 +17,5 @@
   <package id="Nancy.Session.InProc" version="1.4.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net462" />
 </packages>
