--- a/src/Voter.Tests/Voter.Tests.csproj
+++ b/src/Voter.Tests/Voter.Tests.csproj
@@ -106,7 +106,9 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Api\Users\UsersModuleTests.ActivateGooglePlusUser.cs" />
     <Compile Include="Api\Users\UsersModuleTests.LoginGooglePlusUser.cs" />
+    <Compile Include="Api\Users\Validation\ActivateGooglePlusUserRequestValidatorTests.cs" />
     <Compile Include="Api\Users\Validation\LoginGooglePlusUserRequestValidatorTests.cs" />
     <Compile Include="App\ApplicationInfo\UrlInfoFromRequestProviderTests.cs" />
     <Compile Include="App\Handlers\LoginViewModelHandlerTests.cs" />
