--- a/src/Voter.Tests/Voter.Tests.csproj
+++ b/src/Voter.Tests/Voter.Tests.csproj
@@ -111,8 +111,8 @@
     <Compile Include="Api\Users\Validation\ActivateGooglePlusUserRequestValidatorTests.cs" />
     <Compile Include="Api\Users\Validation\LoginGooglePlusUserRequestValidatorTests.cs" />
     <Compile Include="App\ApplicationInfo\UrlInfoFromRequestProviderTests.cs" />
-    <Compile Include="App\Handlers\LoginViewModelHandlerTests.cs" />
-    <Compile Include="App\Validation\NancyContextValidatorTests.cs" />
+    <Compile Include="App\Login\Handlers\LoginViewModelHandlerTests.cs" />
+    <Compile Include="App\Login\Validation\NancyContextValidatorTests.cs" />
     <Compile Include="Composition\HttpRequestPhysicalRootPathResolverTests.cs" />
     <Compile Include="LightweightBootstrapper.cs" />
     <Compile Include="PassThroughDeciderTests.cs" />
