--- a/src/Voter.Tests/Voter.Tests.csproj
+++ b/src/Voter.Tests/Voter.Tests.csproj
@@ -106,6 +106,7 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Api\Users\Models\UserAdapterTests.cs" />
     <Compile Include="Api\Users\UsersModuleTests.ActivateGooglePlusUser.cs" />
     <Compile Include="Api\Users\UsersModuleTests.LoginGooglePlusUser.cs" />
     <Compile Include="Api\Users\UsersModuleTests.DisconnectGooglePlusUser.cs" />
