--- a/src/Voter.Data/Voter.Data.csproj
+++ b/src/Voter.Data/Voter.Data.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +49,9 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="..\InternalsVisibleTo.cs">
+      <Link>InternalsVisibleTo.cs</Link>
+    </Compile>
     <Compile Include="Dapper\DbConnectionFactoryByConnectionString.cs" />
     <Compile Include="Dapper\IDbConnectionFactory.cs" />
     <Compile Include="Dapper\IQueryExecutor.cs" />
@@ -55,6 +59,16 @@
     <Compile Include="IUserDataService.cs" />
     <Compile Include="Records\UserRecord.cs" />
     <Compile Include="UserDataService.cs" />
+    <Compile Include="WebRequestSender\HttpClient.cs" />
+    <Compile Include="WebRequestSender\HttpClientFactory.cs" />
+    <Compile Include="WebRequestSender\HttpRequestMessageBuilder.cs" />
+    <Compile Include="WebRequestSender\IHttpClient.cs" />
+    <Compile Include="WebRequestSender\IHttpClientFactory.cs" />
+    <Compile Include="WebRequestSender\IHttpRequestMessageBuilder.cs" />
+    <Compile Include="WebRequestSender\IRequestSender.cs" />
+    <Compile Include="WebRequestSender\IWebRequestSender.cs" />
+    <Compile Include="WebRequestSender\RequestSender.cs" />
+    <Compile Include="WebRequestSender\WebRequestSender.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Voter.Common\Voter.Common.csproj">
