--- a/src/Voter/Voter.csproj
+++ b/src/Voter/Voter.csproj
@@ -113,9 +113,8 @@
       <HintPath>..\packages\Nancy.Session.InProc.1.4.3\lib\net40\Nancy.Session.InProc.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
@@ -184,6 +183,7 @@
     <Compile Include="App\Validation\NancyContextValidator.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Composition\AppSettingsReader.cs" />
+    <Compile Include="Composition\DomainModule.cs" />
     <Compile Include="Composition\CommonModule.cs" />
     <Compile Include="Composition\HttpRuntimePhysicalRootPathResolver.cs" />
     <Compile Include="Composition\IAppSettingsReader.cs" />
@@ -192,7 +192,6 @@
     <Compile Include="Composition\IPhysicalRootPathResolver.cs" />
     <Compile Include="Composition\NancyModule.cs" />
     <Compile Include="Composition\SecurityModule.cs" />
-    <Compile Include="Configuration\CamelCaseAndSupportForPrivateSettersContractResolver.cs" />
     <Compile Include="Configuration\CustomJsonSerializer.cs" />
     <Compile Include="Configuration\ICustomJsonSerializer.cs" />
     <Compile Include="ErrorPipelines.cs" />
