--- a/src/Voter.Data/Voter.Data.csproj
+++ b/src/Voter.Data/Voter.Data.csproj
@@ -35,6 +35,9 @@
       <HintPath>..\packages\Dapper.1.50.2\lib\net451\Dapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -52,13 +55,17 @@
     <Compile Include="..\InternalsVisibleTo.cs">
       <Link>InternalsVisibleTo.cs</Link>
     </Compile>
+    <Compile Include="GoogleJsonSerializer.cs" />
     <Compile Include="Dapper\DbConnectionFactoryByConnectionString.cs" />
     <Compile Include="Dapper\IDbConnectionFactory.cs" />
     <Compile Include="Dapper\IQueryExecutor.cs" />
     <Compile Include="Dapper\QueryExecutor.cs" />
-    <Compile Include="IUserDataService.cs" />
-    <Compile Include="Records\UserRecord.cs" />
-    <Compile Include="UserDataService.cs" />
+    <Compile Include="GoogleUserDataService.cs" />
+    <Compile Include="IGoogleUserDataService.cs" />
+    <Compile Include="IKnownUserDataService.cs" />
+    <Compile Include="Records\GoogleUserDataRecord.cs" />
+    <Compile Include="Records\KnownUserRecord.cs" />
+    <Compile Include="KnownUserDataService.cs" />
     <Compile Include="WebRequestSender\HttpClient.cs" />
     <Compile Include="WebRequestSender\HttpClientFactory.cs" />
     <Compile Include="WebRequestSender\HttpRequestMessageBuilder.cs" />
