--- a/src/Voter.Tests/Voter.Tests.csproj
+++ b/src/Voter.Tests/Voter.Tests.csproj
@@ -79,9 +79,8 @@
       <HintPath>..\packages\Nancy.Testing.1.4.1\lib\net40\Nancy.Testing.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
@@ -106,6 +105,11 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Api\Users\Handlers\ActivateGooglePlusUserHandlerTests.cs" />
+    <Compile Include="Data\KnownUserDataServiceTests.cs" />
+    <Compile Include="Domain\DTO\Adapters\UserAdapterTests.cs" />
+    <Compile Include="Domain\UserServiceTests.cs" />
+    <Compile Include="Security\FakeSecurityContext.cs" />
     <Compile Include="Api\Users\Models\UserAdapterTests.cs" />
     <Compile Include="Api\Users\UsersModuleTests.ActivateGooglePlusUser.cs" />
     <Compile Include="Api\Users\UsersModuleTests.LoginGooglePlusUser.cs" />
@@ -117,7 +121,10 @@
     <Compile Include="App\AppModuleTests.GetDashboardView.cs" />
     <Compile Include="App\Login\Handlers\LoginViewModelHandlerTests.cs" />
     <Compile Include="App\Login\Validation\NancyContextValidatorTests.cs" />
+    <Compile Include="Common\UnclosableStreamWrapperTests.cs" />
     <Compile Include="Composition\HttpRequestPhysicalRootPathResolverTests.cs" />
+    <Compile Include="Data\GoogleJsonSerializerTests.cs" />
+    <Compile Include="Data\GoogleUserDataServiceTests.cs" />
     <Compile Include="Data\WebRequestSender\HttpClientFactoryTests.cs" />
     <Compile Include="Data\WebRequestSender\HttpRequestMessageBuilderTests.cs" />
     <Compile Include="Data\WebRequestSender\RequestSenderTests.cs" />
