--- a/src/Voter/packages.config
+++ b/src/Voter/packages.config
@@ -3,11 +3,11 @@
   <package id="Autofac" version="4.6.0" targetFramework="net462" />
   <package id="DavidLievrouw.Utils" version="4.0.0" targetFramework="net462" />
   <package id="FluentValidation" version="7.0.2" targetFramework="net462" />
-  <package id="Google.Apis" version="1.21.0" targetFramework="net462" />
-  <package id="Google.Apis.Auth" version="1.21.0" targetFramework="net462" />
-  <package id="Google.Apis.Core" version="1.21.0" targetFramework="net462" />
-  <package id="Google.Apis.Oauth2.v2" version="1.21.0.672" targetFramework="net462" />
-  <package id="Google.Apis.Plus.v1" version="1.21.0.801" targetFramework="net462" />
+  <package id="Google.Apis" version="1.27.0" targetFramework="net462" />
+  <package id="Google.Apis.Auth" version="1.27.0" targetFramework="net462" />
+  <package id="Google.Apis.Core" version="1.27.0" targetFramework="net462" />
+  <package id="Google.Apis.Oauth2.v2" version="1.27.0.859" targetFramework="net462" />
+  <package id="Google.Apis.Plus.v1" version="1.27.0.885" targetFramework="net462" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net462" />
   <package id="Nancy" version="1.4.3" targetFramework="net462" />
@@ -17,5 +17,10 @@
   <package id="Nancy.Session.InProc" version="1.4.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.2" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net462" />
 </packages>
